refactor(icons): estandariza todos los iconos a componentes SVG de Heroicons

--- a/frontend/src/app/features/dashboard/dashboard.component.html
+++ b/frontend/src/app/features/dashboard/dashboard.component.html
@@ -10,7 +10,7 @@
         <span class="welcome-text">{{ 'COMMON.WELCOME' | translate }}, Usuario</span>
         <app-language-selector></app-language-selector>
         <button class="logout-btn" title="{{ 'COMMON.LOGOUT' | translate }}">
-          <app-logout-icon [size]="'20'" [color]="'#fff'" [stroke]="'#fff'"></app-logout-icon>
+          <app-logout-icon [size]="'20'" [stroke]="'#fff'"></app-logout-icon>
         </button>
       </div>
     </header>
