feat: Agregar nuevos módulos al sidebar - Auditorías, Despachos y RPA

--- a/frontend/src/app/shared/components/sidebar/sidebar.component.html
+++ b/frontend/src/app/shared/components/sidebar/sidebar.component.html
@@ -36,6 +36,9 @@
             <app-costs-icon *ngSwitchCase="'costs'" [size]="'24'" [stroke]="'#fff'" />
             <app-reports-icon *ngSwitchCase="'reports'" [size]="'24'" [stroke]="'#fff'" />
             <app-permissions-icon *ngSwitchCase="'permissions'" [size]="'24'" [stroke]="'#fff'" />
+            <app-audit-icon *ngSwitchCase="'audit'" [size]="'24'" [stroke]="'#fff'" />
+            <app-dispatch-icon *ngSwitchCase="'dispatch'" [size]="'24'" [stroke]="'#fff'" />
+            <app-rpa-icon *ngSwitchCase="'rpa'" [size]="'24'" [stroke]="'#fff'" />
           </ng-container>
           <span *ngIf="!collapsed" class="menu-label">{{ item.label | translate }}</span>
         </div>
