--- a/frontend/src/app/shared/components/language-selector/language-selector.component.html
+++ b/frontend/src/app/shared/components/language-selector/language-selector.component.html
@@ -3,7 +3,7 @@
     class="language-button"
     (click)="toggleDropdown()"
     [class.active]="isOpen"
-    title="{{ 'COMMON.LANGUAGE' | translate }}"
+    title="{{ 'LANGUAGES.LANGUAGE' | translate }}"
   >
     <span class="current-name">{{ getCurrentLanguageName() }}</span>
     <span class="dropdown-arrow">▼</span>
